--- a/store/templates/store/Store.html
+++ b/store/templates/store/Store.html
@@ -1,4 +1,6 @@
+{% extends "store/Main.html" %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/main.css' %}">
 
-<h1>STORE</h1>
+{% block content %}
+    <h1>STORE</h1>
+{% endblock content %}
