--- a/store/templates/store/Main.html
+++ b/store/templates/store/Main.html
@@ -10,7 +10,7 @@
     {% compress css %}
     <link rel="stylesheet" href="{% static 'src/output.css' %}" />
     {% endcompress %}
-    <title>Main-web-page</title>
+    <title>QuickLime Luxe | Main page</title>
   </head>
   <body>
     <header>
@@ -18,7 +18,7 @@
         <div class="container px-6 py-4 mx-auto md:flex md:justify-between md:items-center">
             <div class="flex items-center justify-between">
                 <a href="#">
-                    <img class="w-auto h-6 sm:h-7" src="https://merakiui.com/images/full-logo.svg" alt="">
+                    <a class="text-white text-xl font-bold" href="#">QuickLime <span class="accent-color">Luxe</span></a>
                 </a>
     
                 <!-- Mobile menu button -->
