--- a/store/templates/store/Cart.html
+++ b/store/templates/store/Cart.html
@@ -1,1 +1,11 @@
-<h1>CART PAGE</h1>
+{% extends "store/Main.html" %}
+{% load static %}
+{% block content %}
+
+<div>
+    <div>
+        <button>Continue Shopping</button>
+    </div>
+</div>
+
+{% endblock content %}
